--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: pkgDemo
 Type: Package
-Title: Combined Toxic 100 / Greenhouse 100 Indexes (2020 Report, Based on 2018 Data)
+Title: Top Climate, Air, and Water Polluters (2018)
 Version: 0.1.0
 Author: University of Massachusetts Amherst, Political Economy Research Institute
-Maintainer: mabeyerch@reed.edu, alyandric@reed.edu, albisbub@reed.edu 
+Maintainer: alyandric@reed.edu, albisbub@reed.edu 
 Description: This data set lists the top 100 polluter companies by the comparative risk they pose to chronic human health from air pollutants directly released or transferred to incinerators (and not destroyed) from large facilities in the US in 2018.
-License: © 2019 Political Economic Research Institute. All rights reserved.
+License: Copyright 2019 Political Economic Research Institute. All rights reserved.
 Encoding: UTF-8
 LazyData: true
 Depends: 
