--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
-Package: pkgDemo
+Package: topPolluters
 Type: Package
 Title: Top Climate, Air, and Water Polluters (2018)
 Version: 0.1.0
 Author: University of Massachusetts Amherst, Political Economy Research Institute
-Maintainer: alyandric@reed.edu, albisbub@reed.edu 
+Maintainer: Alyssa <alyandric@reed.edu> , Blaise <albisbub@reed.edu>
 Description: This data set lists the top 100 polluter companies by the comparative risk they pose to chronic human health from air pollutants directly released or transferred to incinerators (and not destroyed) from large facilities in the US in 2018.
 License: Copyright 2019 Political Economic Research Institute. All rights reserved.
 Encoding: UTF-8
 LazyData: true
-Depends: 
-    R (>= 2.10)
-Imports: dplyr
+Depends: R (>= 2.10),dplyr
 RoxygenNote: 7.1.1
+
